# pathmut

./: .gitignore  Cargo.toml  README.md  backup.nix  flake.nix  justfile  result  rust-toolchain.toml  shell.nix
src/: app.rs  app_new.rs  command.rs  component.rs  lib.rs  main.rs
