[package]
name = "pathmut"
version = "0.4.0"
authors = ["rutrum <dave@rutrum.net>"]
edition = "2021"
license = "GPL-3.0"
description = "Command line utility for extracting, removing, and replacing components from path strings"
repository = "https://github.com/rutrum/pathmut"
keywords = [ "path", "extension", "file" ]
categories = [ "text-processing", "command-line-utilities" ]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.0", features = ["cargo", "color", "wrap_help"] }
atty = "0.2.14"

[dev-dependencies]
predicates = "2.1.1"
assert_cmd = "2.0.4"
