[package]
name = "pathmut"
version = "0.6.0"
authors = ["rutrum <dave@rutrum.net>"]
edition = "2021"
license = "GPL-3.0"
description = "Command line utility for manipulating path strings"
repository = "https://github.com/rutrum/pathmut"
keywords = [ "path", "extension", "file" ]
categories = [ "text-processing", "command-line-utilities" ]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.0", features = ["cargo", "color", "wrap_help"] }
typed-path = "0.10.0"

[dev-dependencies]
predicates = "2.1.1"
assert_cmd = "2.0.4"
